--- a/index.html
+++ b/index.html
@@ -2,29 +2,47 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="">
-    <title> ESCUELA DE KARATE DE RIO GALLEGOS </title>
+    <meta https-equiv= "X-UA-Complatoble" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial scale=1.0"> 
+    <title> PROYECTO_FINAL </title>
     <link rel="stylesheet" href="public/css/style.css">
-    <header> VLOG DOJO YUSHIN RGL </header> 
+    <link rel="stylesheet" href="public/imag/outline_sports_martial_arts_black_24dp.png">
     <body>
-        <nav> <a href="https://www.facebook.com/profile.php?id=100083853675438"> PAGINA DE FACEBOOK</a></nav>
-    <div> 
-        <h1>KARATE RIO GALLEGOS - ESCUELA JUSTO GOMEZ</h1>
-        <img src="public/imag/377969062_277283038410150_8771232574782217054_n.jpg" width="600px" height=
-         alt="FOTO">
-         <p> <i>Escuela de karate do tradicional, estilo shotokan. 
-            Maestro a nivel nacional, Director Tecnico Nacional, Sensei Justo Gomez, 7mo Dan y 7º veces campeon mundial. Instructora a cargo del Gimnasio Municipal 17 de octubre, Lusmila Ojeda Rebull, 1er Dan </i></p></div>
-          <div class="container">
-            <p>DOJO YUSHIN
-                01 de AGOSTO de 2.022 
+     <!--NAVBAR-->
+    <nav class=" navbar">
+        <a href="">INICIO</a>
+        <a href="public/views/dias.html">DIAS y HORARIOS</a>
+        <a href="">SOBRE NOSOTROS</a>
+        <a href="">NOVEDADES</a>
+    </nav>
+    <!--HEADER-->
+    <header>
+        <div>  
+        <h1>VLOG DEL DOJO YUSHIN </h1>
+        </header> 
+             </div>
+    <!--PRINCIPAL-->
+        <div class="PRINCIPAL"> 
+            <aside> 
+                <h2 class="assidetittle">DOJO YUSHIN, Gimnasio Municipal ``17 DE OCTUBRE´´</h2>
+                <a> <img src="public/imag/logo.jpg" alt="LOGO"></a>
+                <h3 class="assidetittle">Director Tecnico Nacional y Profesora a cargo</h3>
+                <img src="public/imag/yop.jpg" alt="">
+                <h4 class="assidetittle">CAMPEONES NACIONALES</h4>
+                <img src="public/imag/karate3.jpg" alt="">
+            </aside>
+            <main>
+                <h1>KARATE RIO GALLEGOS - ESCUELA JUSTO GOMEZ</h1>
+                <p><i>Escuela de karate do tradicional, estilo shotokan. </i></p>
+            <a href="public/videos/KARATE ‐ Hecho con Clipchamp.mp4"></a><video src="public/videos/KARATE ‐ Hecho con Clipchamp.mp4" controls autoplay muted></video>
+            <p> Torneo Provincial</p>
+            <img src="public/imag/viaje1.jpg" alt="TORNEO PROVINCIAL">
+        </main>
+<!-- FOOTER --> 
+        <footer> 
+            <p> &radic; Ojeda Rebull Lusmila - lusmila123@icloud.com - Potrero Digital 2.023
+            <a href="ttps://www.facebook.com/profile.php?id=100083853675438">FACEBOOK</a>
             </p>
-            <p>INSCRIPCIONES ABIERTA TODO EL AÑO</p>
-            <p>CLASES GRATUITAS Y SIN LIMITE DE EDAD</p>
-        </div>
-        <div class="container"> 
-            <p>Profesora de Karate a cargo: Lusmila Ojeda Rebull, 1er DAN. 
-                Con mas de 10 años de practica de este arte marcial y 1 año dando clases dirigida a todo
-            </p>
-        </div>
+        </footer>
     </body>
 </html>
